--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- --------- UNICONS ---------- -->
     <script src="https://kit.fontawesome.com/31179a0acc.js" crossorigin="anonymous"></script>
-    <!-- --------- CSS ---------- -->
     <link rel="stylesheet" href="style.css">
-    <!-- --------- FAVICON ---------- -->
-    <!-- <link rel="shortcut icon" href="favicon.png" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="web pfoto.jpg" type="image/x-icon">
     <title>Portfolio | Srikanth</title>
 </head>
 <body>
@@ -23,38 +20,27 @@
             <ul class="nav_menu_list">
                 <li class="nav_list">
                     <a href="#home" class="nav-link active-link">Home</a>
-                    <!-- <div class="circle"></div> -->
                 </li>
                 <li class="nav_list">
                     <a href="#about" class="nav-link">About</a>
-                    <!-- <div class="circle"></div> -->
                 </li>
                 <li class="nav_list">
                     <a href="#projects" class="nav-link">Projects</a>
-                    <!-- <div class="circle"></div> -->
                 </li>
                 <li class="nav_list">
                     <a href="#contact" class="nav-link">Contact</a>
-                    <!-- <div class="circle"></div> -->
                 </li>
             </ul>
         </div>
         <div class="nav-button">
-            <!-- <button class="btn">Download CV <i class="uil uil-file-alt"></i></button> -->
             <a href="Srikanth-S-Resume.pdf" class="btn" id="download" download>Download CV <i class="fa fa-file-text-o" aria-hidden="true"></i></a>
         </div>
-        <!-- <div class="nav-menu-btn">
-            <i class="uil uil-bars" onclick="myMenuFunction()"></i>
-        </div> -->
       </nav>
     <!-- -------------- MAIN ---------------- -->
     <main class="wrapper">
        <!-- -------------- FEATURED BOX ---------------- -->
        <section class="featured-box" id="home">
           <div class="featured-text">
-            <!-- <div class="featured-text-card">
-                <span>Srikanth</span>
-            </div> -->
             <div class="featured-name">
                 <p>I'm<span class="typedText"> Srikanth</span></p>
             </div>
@@ -64,9 +50,7 @@
                 </p>
             </div>
             <div class="featured-text-btn">
-                <!-- <button class="btn blue-btn">View CV</button> -->
                 <a href="Srikanth-S-Resume.pdf" class="btn blue-btn" target="_blank">View CV <i class="fa fa-eye" aria-hidden="true"></i></a>
-                <!-- <button class="btn">Download CV <i class="uil uil-file-alt"></i></button> -->
                 <a href="Srikanth-S-Resume.pdf" class="btn" id="download" download>Download CV <i class="fa fa-download" aria-hidden="true"></i></a>
             </div>
             <div class="social_icons">
@@ -215,11 +199,5 @@
         </div>
     </footer>
     </div>
-    <!-- ----- TYPING JS Link ----- -->
-    <!-- <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script> -->
-       <!-- ----- SCROLL REVEAL JS Link----- -->
-    <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
-    <!-- ----- MAIN JS ----- -->
-    <!-- <script src="script.js"></script> -->
 </body>
 </html>
